win32 port: fixed compilation of test.c, added ppp_impl.h to project

--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1255,6 +1255,24 @@
 						</FileConfiguration>
 					</File>
 					<File
+						RelativePath="$(LWIP_DIR)\src\netif\ppp\ppp_impl.h"
+						>
+						<FileConfiguration
+							Name="Release|Win32"
+							>
+							<Tool
+								Name="VCCustomBuildTool"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="VCCustomBuildTool"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
 						RelativePath="$(LWIP_DIR)\src\netif\ppp\ppp_oe.c"
 						>
 					</File>
