--- a/ports/win32/msvc8/lwip_unittests.vcproj
+++ b/ports/win32/msvc8/lwip_unittests.vcproj
@@ -39,7 +39,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\check;..\..\..\..\check\src;$(LWIP_DIR)\src\include,$(LWIP_DIR)\src\include\ipv4,..\include,.."
+				AdditionalIncludeDirectories="..\check;..\..\..\..\check\src;&quot;$(LWIP_DIR)\src\include&quot;;&quot;$(LWIP_DIR)\src\include\ipv4&quot;;&quot;$(LWIP_DIR)\src\include\ipv6&quot;;..\include;.."
+				PreprocessorDefinitions="_LIB;WIN32;_DEBUG;LWIP_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -109,7 +110,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\check;..\..\..\..\check\src;$(LWIP_DIR)\src\include,$(LWIP_DIR)\src\include\ipv4,..\include,.."
+				AdditionalIncludeDirectories="..\check;..\..\..\..\check\src;&quot;$(LWIP_DIR)\src\include&quot;;&quot;$(LWIP_DIR)\src\include\ipv4&quot;;&quot;$(LWIP_DIR)\src\include\ipv6&quot;;..\include;.."
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="4"
