Added dhcp unit test to Win32 project

--- a/ports/win32/msvc8/lwip_unittests.vcproj
+++ b/ports/win32/msvc8/lwip_unittests.vcproj
@@ -223,6 +223,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="dhcp"
+			>
+			<File
+				RelativePath="..\..\..\..\lwip\test\unit\dhcp\test_dhcp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lwip\test\unit\dhcp\test_dhcp.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\..\lwip\test\unit\lwip_check.h"
 			>
