Added missing files (test_pbuf.c/.h)

--- a/ports/win32/msvc8/lwip_unittests.vcproj
+++ b/ports/win32/msvc8/lwip_unittests.vcproj
@@ -170,6 +170,14 @@
 				RelativePath="..\..\..\..\lwip\test\unit\core\test_mem.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\..\lwip\test\unit\core\test_pbuf.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lwip\test\unit\core\test_pbuf.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="tcp"
